--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eshop-finall",
+  "name": "eshop-final",
   "version": "0.1.0",
   "homepage": "https://PUSELETS.github.io/e_shopn",
   "private": true,
@@ -25,7 +25,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
-    "next": "13.4.12",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.2.0",
